# NUS-AR5302-3

./: .gitignore  CLAUDE.md  README.md  project_roadmap.drawio  pyproject.toml  test.drawio
.claude/: plugins.json
data/: station_topic_classification_harmonized.csv  station_topic_classification_supplemented.csv
docs/: 2026_04_16_problems.txt  Part 3_Temporal.docx  info.md  ohsome_api_strategy.md  osm_historical_research.md  paper_synthesis.md  part1_handoff.md  part2_data_acquisition_guide.md  part2_development_log.md  part2_development_plan.md  part3_development_plan.md  part3_development_plan_解释.md  part4_handoff.md  part4_poi_metadata_guide.md  part4_time_of_day_proposal.md  progress_20250402.md  progress_20260325.md  progress_20260405.md  progress_20260406.md  progress_20260408.md  todo.md  workload_plan.md  yearly_snapshot_data_quality_notes.md  分析.docx
scripts/: build_station_topic_classification_supplemented.py  export_part4_tables_to_word.py  harmonize_station_topic_classification.R  make_destination_flow_map.R  part1_identify_stations.Rmd  part1_identify_stations.html  part2_poi_lda_yk.Rmd  part2_poi_lda_yk.html  part3_poi_lda_yk.Rmd  part3_poi_lda_yk.html  part3_temporal_od_ari.Rmd  part4_comparative.Rmd  part4_comparative.html  part4_comparative.knit.md  part4_comparative_check.html  report.Rmd  test_hello.py
utils/: analyze_poi_metadata.py  calculate_topic_coherence.py  calculate_topic_coherence_gensim.py  download_geospatial_data.py  download_historical_pois.py  download_od_data.py  download_overture_pois.py  download_pois.py  explore_poi_metadata.py  (+9 more)
(+1 files in other folders)
